Loading localized result and fixing html bug

--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -41,7 +41,7 @@
     {% endif %}
     <div class="mt-10">
         {% for benefit in benefits %}
-            {% include "benefits/" + benefit + ".njk" %}
+            {% include "benefits/" + benefit + "-" + getLocale() +  ".njk" %}
         {% endfor %}
     </div>
 
