--- a/views/benefits/ccb_payment-en.njk
+++ b/views/benefits/ccb_payment-en.njk
@@ -32,4 +32,4 @@
         "https://www.canada.ca/en/department-finance/economic-response-plan.html#individuals",
         "Learn more about the Canada Child Benefit"
     )}}
-{% endif %}
+</div>
