--- a/views/benefits/ccb_payment-fr.njk
+++ b/views/benefits/ccb_payment-fr.njk
@@ -30,4 +30,4 @@
         "https://www.canada.ca/fr/ministere-finances/plan-intervention-economique.html#particuliers",
         "En savoir plus à propos de l’Allocation canadienne pour enfant "
     )}}
-{% endif %}
+</div>
