--- a/views/benefits/ei_regular-fr.njk
+++ b/views/benefits/ei_regular-fr.njk
@@ -29,4 +29,4 @@
         "https://www.canada.ca/fr/services/prestations/ae/assurance-emploi-reguliere/demande.html",
         "Demander les prestations regulières de l’assurance-emploi"
     )}}
-{% endif %}
+</div>
