--- a/views/benefits/ei_regular_cerb-fr.njk
+++ b/views/benefits/ei_regular_cerb-fr.njk
@@ -35,4 +35,4 @@
         "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
         "Demander les prestations regulières de l’assurance-emploi et la PCU"
     )}}
-{% endif %}
+</div>
