--- a/views/benefits/ei_workshare-en.njk
+++ b/views/benefits/ei_workshare-en.njk
@@ -29,4 +29,4 @@
         "https://www.canada.ca/en/employment-social-development/corporate/notices/coronavirus.html#h4.02",
         "Learn more about EI Work-Sharing"
     )}}
-{% endif %}
+</div>
