--- a/views/benefits/ei_workshare-fr.njk
+++ b/views/benefits/ei_workshare-fr.njk
@@ -28,4 +28,4 @@
         "https://www.canada.ca/fr/emploi-developpement-social/ministere/avis/coronavirus.html#h4.02",
         "En savoir plus à propos du programme Travail partagé de l’assurance-emploi"
     )}}
-{% endif %}
+</div>
