--- a/views/benefits/mortgage_deferral-en.njk
+++ b/views/benefits/mortgage_deferral-en.njk
@@ -24,4 +24,4 @@
         "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19",
         "Learn more about help with your mortgage"
     )}}
-{% endif %}
+</div>
