--- a/views/benefits/mortgage_deferral-fr.njk
+++ b/views/benefits/mortgage_deferral-fr.njk
@@ -24,4 +24,4 @@
         "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19?l=fr",
         "Vérifier auprès de votre banque pour en savoir plus"
     )}}
-{% endif %}
+</div>
