--- a/views/benefits/rrif-en.njk
+++ b/views/benefits/rrif-en.njk
@@ -17,4 +17,4 @@
         "https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-retirement-income-fund-rrif.html",
         "Contact your bank for more details"
     )}}
-{% endif %}
+</div>
