--- a/views/benefits/rrif-fr.njk
+++ b/views/benefits/rrif-fr.njk
@@ -18,4 +18,4 @@
         "https://www.canada.ca/fr/agence-revenu/services/impot/particuliers/sujets/fonds-enregistre-revenu-retraite-ferr.html",
         "Contactez votre banque pour plus de détails"
     )}}
-{% endif %}
+</div>
