--- a/views/benefits/student_loan-en.njk
+++ b/views/benefits/student_loan-en.njk
@@ -25,4 +25,4 @@
         "https://www.csnpe-nslsc.canada.ca/en/home",
         "Learn more about help with student loan payments"
     )}}
-{% endif %}
+</div>
