--- a/views/benefits/student_loan-fr.njk
+++ b/views/benefits/student_loan-fr.njk
@@ -25,4 +25,4 @@
         "En savoir plus à propos de l’aide disponible pour votre dette d’étude",
         "https://www.csnpe-nslsc.canada.ca/fr/Accueil"
     )}}
-{% endif %}
+</div>
