--- a/views/benefits/cerb-en.njk
+++ b/views/benefits/cerb-en.njk
@@ -37,4 +37,4 @@
         "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
         "Apply for CERB"
     )}}
-{% endif %}
+</div>
