--- a/views/benefits/cerb-fr.njk
+++ b/views/benefits/cerb-fr.njk
@@ -37,4 +37,4 @@
         "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
         "Demander la PCU"
     )}}
-{% endif %}
+</div>
