--- a/views/benefits/ei_regular-en.njk
+++ b/views/benefits/ei_regular-en.njk
@@ -29,4 +29,4 @@
         "https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html",
         "Apply for EI Regular Benefits"
     )}}
-{% endif %}
+</div>
