--- a/views/benefits/ei_sickness_cerb-en.njk
+++ b/views/benefits/ei_sickness_cerb-en.njk
@@ -29,4 +29,4 @@
         "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
         "Apply for CERB"
     )}}
-{% endif %}
+</div>
