--- a/views/benefits/rent_help-en.njk
+++ b/views/benefits/rent_help-en.njk
@@ -18,4 +18,4 @@
         "https://www.cmhc-schl.gc.ca/en/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
         "Check with your provincial government for more details"
     )}}
-{% endif %}
+</div>
