--- a/views/benefits/rent_help-fr.njk
+++ b/views/benefits/rent_help-fr.njk
@@ -18,4 +18,4 @@
         "https://www.cmhc-schl.gc.ca/fr/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
         "Vérifier auprès de mon gouvernement provincial pour en savoir plus"
     )}}
-{% endif %}
+</div>
