--- a/views/benefits/rent_help-en.njk
+++ b/views/benefits/rent_help-en.njk
@@ -14,7 +14,7 @@
   </div>
 
   {{ infoLink(
-        rent_help"",
+        "rent_help",
         "https://www.cmhc-schl.gc.ca/en/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
         "Check with your provincial government for more details"
     )}}
