--- a/views/benefits/rent_help-fr.njk
+++ b/views/benefits/rent_help-fr.njk
@@ -14,7 +14,7 @@
   </div>
 
   {{ infoLink(
-        rent_help"",
+        "rent_help",
         "https://www.cmhc-schl.gc.ca/fr/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
         "Vérifier auprès de mon gouvernement provincial pour en savoir plus"
     )}}
