--- a/views/benefits/ei_regular-en.njk
+++ b/views/benefits/ei_regular-en.njk
@@ -18,7 +18,7 @@
 
     <strong>Good to know:</strong>
     <ul>
-      <li>Even if you left your job voluntarily for your health needs during COVID—19, you may still be eligible for EI.</li>
+      <li>Even if you left your job voluntarily for your health needs during COVID-19, you may still be eligible for EI.</li>
       <li>The number of weeks you get paid depends on how many “insurable hours” you worked in the last 52 weeks.</li>
     </ul>
 
