--- a/views/benefits/ei_regular-fr.njk
+++ b/views/benefits/ei_regular-fr.njk
@@ -18,7 +18,7 @@
 
     <strong>Bon à savoir :</strong>
     <ul>
-      <li>Vous pourriez être admissible à l’assurance-emploi même si vous avez quitté votre emploi volontairement pour des raisons de santé liées à la COVID—19.</li>
+      <li>Vous pourriez être admissible à l’assurance-emploi même si vous avez quitté votre emploi volontairement pour des raisons de santé liées à la COVID-19.</li>
       <li>Le nombre de semaines admissible dépend du nombre “d’heures assurables” travaillées lors des 52 semaines précédentes.</li>
     </ul>
 
