--- a/views/_includes/ga.njk
+++ b/views/_includes/ga.njk
@@ -7,8 +7,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'UA-102484926-19');
-      gtag('config', '<GA_MEASUREMENT_ID>', { 'anonymize_ip': true });
+      gtag('config', 'UA-102484926-19', { 'anonymize_ip': true });
     </script>
   {% endif %}
 
@@ -19,8 +18,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'UA-102484926-20');
-      gtag('config', '<GA_MEASUREMENT_ID>', { 'anonymize_ip': true });
+      gtag('config', 'UA-102484926-20', { 'anonymize_ip': true });
     </script>
   {% endif %}
 {% endif %}
