Update ei_sickness_cerb result

--- a/views/benefits/ei_sickness_cerb-en.njk
+++ b/views/benefits/ei_sickness_cerb-en.njk
@@ -16,8 +16,8 @@
       <li> Did not leave your job voluntarily. </li>
       <li>Earned at least $5,000 in 2019 or the last 12 months.</li>
       <li>Stopped working because of COVID-19: <ul class='list-disc list-outside'>
-          <li>In the first 4 weeks you apply for, you received no income for at least 14 consecutive days.</li>
-          <li>For the next 4-week periods after your first application, you expect to receive no income at all for the whole period.</li>
+          <li>In the first 4 weeks you apply for, you received less than $1,000 for at least 14 consecutive days.    </li>
+          <li>For the next 4-week periods after your first application, you expect to receive less than $1,000 for the whole period.</li>
         </ul>
       </li>
     </ul>
