--- a/views/benefits/ei_regular_cerb-en.njk
+++ b/views/benefits/ei_regular_cerb-en.njk
@@ -22,7 +22,7 @@
 
     <strong>Good to know:</strong>
     <ul class='list-disc list-outside'>
-      <li>You’ll need to re-apply for CERB for each 4-week period you’re not working</li>
+      <li>You’ll need to submit “claimant reports” to Service Canada every 2 weeks. </li>
     </ul>
 
   </div>
