--- a/views/_includes/feedback.njk
+++ b/views/_includes/feedback.njk
@@ -43,4 +43,8 @@
     <div id="feedback-confirmation" class="mt-2 px-8 py-6 rounded border border-gray-300 bg-gray-100 hidden">
       <p class="">{{ __('feedback.thanks') }}</p>
     </div>
+
+    <div id="feedback-error" class="mt-2 px-8 py-6 rounded border border-gray-300 bg-gray-100 hidden">
+      <p class="">{{ __('Internal server error') }}</p>
+    </div>
 </details>
