--- a/views/base.njk
+++ b/views/base.njk
@@ -24,7 +24,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:700|Noto+Sans:400,700&amp;display=fallback" rel="stylesheet">
         <link rel="stylesheet" href="/dist/css/styles.css">
         <!-- Google Tag Manager -->
-        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        <script nonce="{{ nonce }}">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
@@ -61,9 +61,7 @@
         </div>
 
         <!-- Required for Adobe Analytics -->
-        <script type="text/javascript">_satellite.pageBottom();</script>
-{%- from 'benefit-result.njk' import blueLI as blueLI with context -%}
-{%- from 'benefit-result.njk' import infoLink as infoLink with context -%}
+        <script nonce="{{ nonce }}" type="text/javascript">_satellite.pageBottom();</script>
 
         {% include "_includes/script.njk" %}
         {% block scripts %}
