--- a/views/_includes/script.njk
+++ b/views/_includes/script.njk
@@ -62,7 +62,7 @@
         }
 
         // post to our feedback endpoint
-        xmlhttp.open('POST', '{{ routePath('feedback') }}', true);
+        xmlhttp.open('POST', '/{{ getLocale() }}/feedback', true);
         xmlhttp.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
         xmlhttp.send('problems=' + problems + '&_csrf=' + csrf.value);
     }
