--- a/routes/start/start.njk
+++ b/routes/start/start.njk
@@ -6,7 +6,9 @@
 
     <div>
         <p class="mb-8">{{ __('start.intro.2') | safe }}</p>
-        <h2 class="text-2xl mb-5">{{ __('start.lastupdated') }}</h2>
+        {% if BUILD_DATE %}
+            <h2 class="text-2xl mb-5">{{ __('start.lastupdated') }} <time datetime="{{ BUILD_DATE }}">{{ BUILD_DATE | lastmodified(getLocale()) }}</time></h2>
+        {% endif %}
         <p>{{ __('start.intro.3') | safe }}</p>
     </div>
 
