--- a/views/_includes/script.njk
+++ b/views/_includes/script.njk
@@ -29,7 +29,7 @@
 </script>
 
 <!-- Feedback form -->
-<script>
+<script nonce="{{ nonce }}">
     const form = document.getElementById('feedback-form');
     const confirmation = document.getElementById('feedback-confirmation');
     const error = document.getElementById('feedback-error');
