Change Nunjucks filter name to 'lastupdated'

--- a/routes/start/start.njk
+++ b/routes/start/start.njk
@@ -7,7 +7,7 @@
     <div>
         <p class="mb-8">{{ __('start.intro.2') | safe }}</p>
         {% if LAST_UPDATED %}
-            <h2 class="text-2xl mb-5">{{ __('start.lastupdated') }} <time datetime="{{ LAST_UPDATED }}">{{ LAST_UPDATED | lastmodified(getLocale()) }}</time></h2>
+            <h2 class="text-2xl mb-5">{{ __('start.lastupdated') }} <time datetime="{{ LAST_UPDATED }}">{{ LAST_UPDATED | lastupdated(getLocale()) }}</time></h2>
         {% endif %}
         <p>{{ __('start.intro.3') | safe }}</p>
     </div>
