fix warning about flex start property

--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -191,7 +191,7 @@ form {
 
       .button-link {
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
 
         @include md {
           justify-content: center;
