--- a/views/benefits/cerb-fr.njk
+++ b/views/benefits/cerb-fr.njk
@@ -12,7 +12,7 @@
 
   <div class="pb-5 mt-6">
 
-    <strong>Cette prestation peut vous aider si : </strong>
+    <strong>Cette prestation peut vous aider si :</strong>
     <ul class='list-outside list-disc'>
       <li>vous avez été forcé de quitter votre emploi.</li>
       <li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li>
@@ -23,10 +23,10 @@
       </li>
     </ul>
 
-    <strong>Bon à savoir :</strong>
+    <strong>Prochaines étapes :</strong>
     <ul class='list-outside list-disc'>
-      <li>Offerte du 15 mars au 3 octobre 2020.</li>
-      <li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines.</li>
+      <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande pour la PCU auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
+      <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
       <li>Ces montants sont imposables.</li>
     </ul>
 
