--- a/views/benefits/ei_regular_cerb-fr.njk
+++ b/views/benefits/ei_regular_cerb-fr.njk
@@ -23,9 +23,11 @@
       </li>
     </ul>
 
-    <strong>Bon à savoir :</strong>
+    <strong>Prochaines étapes :</strong>
     <ul class='list-disc list-outside'>
-      <li>Vous devrez présenter une nouvelle déclaration auprès de Service Canada à chaque période de 2 semaines.</li>
+      <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande pour la PCU auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
+      <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
+      <li>Ces montants sont imposables. </li>
     </ul>
 
   </div>
@@ -33,6 +35,6 @@
   {{ infoLink(
         "ei_regular_cerb",
         "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
-        "Demander les prestations regulières de l’assurance-emploi et la PCU"
+        "Demander la PCU"
     )}}
 </div>
