ei_sickness + cerb card updates

--- a/views/benefits/ei_sickness_cerb-fr.njk
+++ b/views/benefits/ei_sickness_cerb-fr.njk
@@ -22,11 +22,18 @@
       </li>
     </ul>
 
+    <strong>Prochaines étapes:</strong>
+    <ul class='li-disc list-outside'>
+      <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande pour la PCU auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
+      <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
+      <li>Ces montants sont imposables.</li>
+    </ul>
+
   </div>
 
   {{ infoLink(
         "ei_sickness_cerb",
         "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
-        "Demander les prestations regulières de l’assurance-emploi et la PCU"
+        "Demander la PCU"
     )}}
 </div>
