update some-income controller and spec add missing comma to options in some-income view

--- a/routes/question-your-situation-some-income/question-your-situation-some-income.njk
+++ b/routes/question-your-situation-some-income/question-your-situation-some-income.njk
@@ -11,7 +11,7 @@
                 [
                     { value: 'hours-reduced', text:__('your_situation.some_income.1')},
 
-                    { value: 'employed-part-time', text:__('your_situation.some_income.2')}
+                    { value: 'employed-part-time', text:__('your_situation.some_income.2')},
                     
                     { value: 'selfemployed-lost-a-job', text:__('your_situation.some_income.3')},
 
