Remove EI REgular alone from getBenefits update the options in some-income to match spreadsheet

--- a/routes/question-your-situation-some-income/question-your-situation-some-income.njk
+++ b/routes/question-your-situation-some-income/question-your-situation-some-income.njk
@@ -11,9 +11,9 @@
                 [
                     { value: 'hours-reduced', text:__('your_situation.some_income.1')},
 
-                    { value: 'employed-part-time', text:__('your_situation.some_income.2')},
+                    { value: 'employed-lost-a-job', text:__('your_situation.some_income.2')},
                     
-                    { value: 'selfemployed-lost-a-job', text:__('your_situation.some_income.3')},
+                    { value: 'selfemployed-some-income', text:__('your_situation.some_income.3')},
 
                     { value: 'retired', text:__('your_situation.some_income.4')},
 
