--- a/views/benefits/gst_credit-en.njk
+++ b/views/benefits/gst_credit-en.njk
@@ -14,7 +14,7 @@
     <strong>Good to know:</strong>
     <ul class='list-disc list-outside'>
       <li>You don’t need to do anything to receive this payment. It was sent automatically if you already receive the GST credit, starting April 9.</li>
-      <li>Check your bank account or mailbox to see iffyou’ve received it.</li>
+      <li>Check your bank account or mailbox to see if you’ve received it.</li>
     </ul>
 
   </div>
