update button cerb cards button text

--- a/views/benefits/cerb-en.njk
+++ b/views/benefits/cerb-en.njk
@@ -35,6 +35,6 @@
   {{ infoLink(
         "cerb",
         "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
-        "Apply for CERB"
+        "Check your eligibility for CERB"
     )}}
 </div>
