--- a/views/benefits/ei_sickness_cerb-fr.njk
+++ b/views/benefits/ei_sickness_cerb-fr.njk
@@ -34,6 +34,6 @@
   {{ infoLink(
         "ei_sickness_cerb",
         "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
-        "Demander la PCU"
+        "Vérifier votre admissibilité à la PCU"
     )}}
 </div>
