--- a/views/benefits/ei_regular_cerb-fr.njk
+++ b/views/benefits/ei_regular_cerb-fr.njk
@@ -35,6 +35,6 @@
   {{ infoLink(
         "ei_regular_cerb",
         "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
-        "Demander la PCU"
+        "Vérifier votre admissibilité à la PCU"
     )}}
 </div>
