--- a/views/benefits/ei_sickness_cerb-en.njk
+++ b/views/benefits/ei_sickness_cerb-en.njk
@@ -35,6 +35,6 @@
   {{ infoLink(
         "ei_sickness_cerb",
         "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
-        "Apply for CERB"
+        "Check your eligibility for CERB"
     )}}
 </div>
