--- a/views/benefits/ei_sickness_cerb-fr.njk
+++ b/views/benefits/ei_sickness_cerb-fr.njk
@@ -16,8 +16,8 @@
       <li> vous avez été forcé de quitter votre emploi. </li>
       <li> vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois. </li>
       <li> vous avez arrêté de travailler en raison de la COVID-19 : <ul class='list-disc list-outside'>
-          <li>Votre revenu était sous 1000 $ pendant au moins 14 jours consécutifs durant les 4 premières semaines de votre demande.</li>
-          <li>Vous anticipez recevoir moins de 1000 $ durant les prochaines périodes de 4 semaines.</li>
+          <li>Votre revenu n’était pas plus de 1000 $ pendant au moins 14 jours consécutifs durant les 4 premières semaines de votre demande.</li>
+          <li>Vous anticipez ne recevoir pas plus de 1000 $ durant les prochaines périodes de 4 semaines.</li>
         </ul>
       </li>
     </ul>
