--- a/views/base.njk
+++ b/views/base.njk
@@ -56,7 +56,7 @@
         </div>
 
         <!-- Required for Adobe Analytics -->
-        <script nonce="{{ nonce }}" type="text/javascript">_satellite.pageBottom();</script>
+        <script type="text/javascript">_satellite.pageBottom();</script>
 
         {% include "_includes/script.njk" %}
         {% block scripts %}
