fix all typos recorded in issue

--- a/views/benefits/gst_credit-fr.njk
+++ b/views/benefits/gst_credit-fr.njk
@@ -22,7 +22,7 @@
 
   {{ infoLink("gst_credit",
         "https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/ctpstvh-augmentation-covid-19.html",
-        "En savoir plus à propos du crédit pour la TPS/TVH"
+        "En savoir plus à propos du crédit pour la TPS"
     )}}
 
 </div>
