--- a/views/benefits/mortgage_deferral-fr.njk
+++ b/views/benefits/mortgage_deferral-fr.njk
@@ -22,6 +22,6 @@
   {{ infoLink(
         "mortgage_deferral",
         "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19?l=fr",
-        "Vérifier auprès de votre banque pour en savoir plus"
+        "En savoir plus à propos du soutien hypothécaire"
     )}}
 </div>
