--- a/views/benefits/student_loan-fr.njk
+++ b/views/benefits/student_loan-fr.njk
@@ -5,7 +5,7 @@
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Les paiements sont automatiquement supsendus") }}
+    {{ blueLI("Les paiements sont automatiquement supspendus") }}
     {{ blueLI("Du 30 mars 2020 jusqu’au 30 septembre 2020") }}
   </ul>
 
@@ -22,7 +22,7 @@
 
   {{ infoLink(
         "student_loan",
-        "En savoir plus à propos de l’aide disponible pour votre dette d’étude",
-        "https://www.csnpe-nslsc.canada.ca/fr/Accueil"
+        "https://www.csnpe-nslsc.canada.ca/fr/Accueil",
+        "En savoir plus à propos de l’aide disponible pour votre dette d’étude"
     )}}
 </div>
