--- a/views/benefits/rent_help-fr.njk
+++ b/views/benefits/rent_help-fr.njk
@@ -16,6 +16,6 @@
   {{ infoLink(
         "rent_help",
         "https://www.cmhc-schl.gc.ca/fr/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
-        "Vérifier auprès de mon gouvernement provincial pour en savoir plus"
+        "Vérifier auprès de votre gouvernement provincial pour en savoir plus"
     )}}
 </div>
