use the asset helper to load css, js, img

--- a/views/_includes/fip.njk
+++ b/views/_includes/fip.njk
@@ -2,7 +2,7 @@
     <div class="fip-container">
         <div class="canada-flag">
             <a href="/" aria-label="{{__('Government of Canada')}}">
-                <img src="/img/sig-blk-{{ getLocale() }}.svg"
+                <img src="{{ asset('/img/sig-blk-' + getLocale() + '.svg') }}"
                      alt="{{__('Government of Canada')}}">
             </a>
         </div>
