--- a/views/_includes/footer.njk
+++ b/views/_includes/footer.njk
@@ -11,7 +11,7 @@
             </ul>
         </div>
         <div class="canada-wordmark">
-            <img src="/img/wmms-blk.svg" alt="{{ __('wordmark.alt') }}">
+            <img src="{{ asset('/img/wmms-blk.svg') }}" alt="{{ __('wordmark.alt') }}">
         </div>
     </div>
 </footer>
