--- a/views/_includes/back-link.njk
+++ b/views/_includes/back-link.njk
@@ -1,5 +1,5 @@
 <div class="back-button-container no-js">
   <button id="backButton" class="back-button" role="link">
-    <img src="/img/arrow-circle-left.svg" alt="" /><span>{{__('button.back')}}</span>
+    <img src="{{ asset('/img/arrow-circle-left.svg') }}" alt="" /><span>{{__('button.back')}}</span>
   </button>
 </div>
