--- a/views/base.njk
+++ b/views/base.njk
@@ -19,10 +19,10 @@
         {% include "_includes/adobe.njk" %}
 
         {% if GITHUB_SHA %}<meta name="github-sha" content="{{ GITHUB_SHA }}">{% endif %}
-        <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" sizes="32x32">
+        <link rel="shortcut icon" href="{{ asset('/favicon.png') }}" type="image/x-icon" sizes="32x32">
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans:400,700&amp;display=fallback" rel="stylesheet">
-        <link rel="stylesheet" href="/dist/css/styles.css">
+        <link rel="stylesheet" href="{{ asset('/dist/css/styles.css') }}">
         <title>{% if(title) %}{{ title }} — {% endif %}{{ __('app.title') }}</title>
         {% include "_includes/ga.njk" %}
     </head>
@@ -58,13 +58,13 @@
         <!-- Required for Adobe Analytics -->
         <script type="text/javascript">_satellite.pageBottom();</script>
 
-        {% include "_includes/script.njk" %}
-        {% block scripts %}
-            {% if jsFiles %}
-                {% for val in jsFiles %}
-                    <script type="text/javascript" src={{val}}></script>
-                {% endfor %}
-            {% endif %}
-        {% endblock %}
+        {%- include "_includes/script.njk" -%}
+        {%- block scripts -%}
+            {%- if jsFiles -%}
+                {%- for val in jsFiles -%}
+                    <script type="text/javascript" src={{ asset(val) }}></script>
+                {%- endfor -%}
+            {%- endif -%}
+        {%- endblock -%}
     </body>
 </html>
