--- a/views/macros/buttons.njk
+++ b/views/macros/buttons.njk
@@ -3,7 +3,7 @@
         <div class="buttons--left next-button">
             <button class="py-3 px-4 border shadow" data-cy="next" type="submit">{{ __(submitButtonText) }}</button>
         </div>
-        <div class="buttons--right"><a data-gc-analytics-customclick="ESDC|EDSC:startover:true" class="py-3 px-4 button-link transparent full-width" href="{{ cancelUrl }}"><img src="{{ asset('/img/times-circle.svg') }}" alt="" /><span>{{ __('start_over') }}</span></a></div>
+        <div class="buttons--right"><a data-gc-analytics-customclick="ESDC|EDSC:startover:true" class="py-3 px-4 button-link transparent full-width" href="{{ cancelUrl }}"><img src="{{ asset('/img/times-circle.svg') }}" class="h-6 w-6" alt="" /><span>{{ __('start_over') }}</span></a></div>
     </div>
 {% endmacro %}
 
