Add deploy to staging environment
Add a new job for deploy to staging
Add a new meta-tag for tag version

--- a/views/base.njk
+++ b/views/base.njk
@@ -19,6 +19,7 @@
         {% include "_includes/adobe.njk" %}
 
         {% if GITHUB_SHA %}<meta name="github-sha" content="{{ GITHUB_SHA }}">{% endif %}
+        {% if TAG_VERSION %}<meta name="version" content="{{ TAG_VERSION }}">{% endif %}
         <link rel="shortcut icon" href="{{ asset('/favicon.png') }}" type="image/x-icon" sizes="32x32">
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans:400,700&amp;display=fallback" rel="stylesheet">
