--- a/views/benefits/cerb-en.njk
+++ b/views/benefits/cerb-en.njk
@@ -16,7 +16,7 @@
     <ul class='list-outside list-disc'>
       <li>Did not leave your job voluntarily.</li>
       <li>Earned at least $5,000 in 2019 or the last 12 months.</li>
-      <li>Stopped working because of COVID-19: <ul>
+      <li>Lost income because of COVID-19: <ul>
           <li>In the first 4 weeks you apply for, you received no more than $1,000 for at least 14 consecutive days.</li>
           <li>For the next 4-week periods after your first application, you expect to receive no more than $1,000 for the whole period.</li>
         </ul>
