--- a/routes/question-plans-for-school/question-plans-for-school.njk
+++ b/routes/question-plans-for-school/question-plans-for-school.njk
@@ -2,19 +2,23 @@
 
 {% block content %}
 
-    <h1>{{ __('question-plans-for-school.title') }}</h1>
-
+    <h1>{{ __('plans_for_school.title') }}</h1>
     <div>
-        <p>
-            {{ __('question-plans-for-school.intro') }}
-        </p>
-
-        <form novalidate method="post">
+        {% call form() %}
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-            
-            {{ textInput('form.firstname', 'form.firstname.desc') }}
+
+            {{ radioButtons('plans_for_school',
+                [
+                    { value: 'yes', text:__('plans_for_school.1')},
+                    { value: 'no', text:__('plans_for_school.2')}
+                ],
+                data.plans_for_school,
+                __('form.plans_for_school'),
+                errors,
+                { required: true })
+            }}
             {{ formButtons() }}
-        </form>
+        {% endcall %}
     </div>
 
 {% endblock %}
