Fixing issues with French Text
Copying text from French Cerb Benefit Result to EI Regular and EI
Sickness to align with Figma translations.

--- a/views/benefits/ei_sickness_cerb-fr.njk
+++ b/views/benefits/ei_sickness_cerb-fr.njk
@@ -5,25 +5,26 @@
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("2000 $ pour les 4 premières semaines ") }}
-    {{ blueLI("1000 $ aux 2 semaines par la suite") }}
+    {{ blueLI("2000 $ aux 4 semaines") }}
+    {{ blueLI("Pendant 4 mois maximum") }}
+    {{ blueLI("À recevoir au plus tard 10 jours après la demande") }}
   </ul>
 
   <div class="pb-5 mt-6">
 
-    <strong>La PCU peut vous aider si :</strong>
-    <ul class='list-disc list-outside'>
-      <li> vous avez été forcé de quitter votre emploi. </li>
-      <li> vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois. </li>
-      <li> vous avez arrêté de travailler en raison de la COVID-19 : <ul class='list-disc list-outside'>
+    <strong>Cette prestation peut vous aider si :</strong>
+    <ul class='list-outside list-disc'>
+      <li>vous avez été forcé de quitter votre emploi.</li>
+      <li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li>
+      <li>vous avez arrêté de travailler en raison de la COVID-19 :<ul>
           <li>Votre revenu n’était pas plus de 1000 $ pendant au moins 14 jours consécutifs durant les 4 premières semaines de votre demande.</li>
           <li>Vous anticipez ne recevoir pas plus de 1000 $ durant les prochaines périodes de 4 semaines.</li>
         </ul>
       </li>
     </ul>
 
-    <strong>Prochaines étapes:</strong>
-    <ul class='li-disc list-outside'>
+    <strong>Prochaines étapes :</strong>
+    <ul class='list-outside list-disc'>
       <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande pour la PCU auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
       <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
       <li>Ces montants sont imposables.</li>
