some french text updates

--- a/views/benefits/cesb-fr.njk
+++ b/views/benefits/cesb-fr.njk
@@ -14,14 +14,14 @@
 
     <strong>Cette prestation peut vous aider si : </strong>
     <ul class='list-outside list-disc'>
-      <li>vous êtes étudiant ou récemment diplômé et n’êtes pas élligible à la Prestation canadienne d’urgence.</li>
+      <li>vous êtes étudiant ou récemment diplômé et n’êtes pas admissible à la Prestation canadienne d’urgence.</li>
       <li>vous ne gagnez pas plus de 1000 $ par mois, avant impôts.</li>
     </ul>
 
     <strong>Bon à savoir :</strong>
     <ul class='list-outside list-disc'>
       <li>Les versements seront rétroactifs au 1er mai 2020.</li>
-      <li>Le gouvernement doit apporter des modifications à certaines lois afin de rendre cette prestation possible. Cela prendra un peu de temps.</li>
+      <li>Le gouvernement doit apporter des modifications à certaines lois afin de rendre cette prestation possible. Cela prendra un peu de temps et pourrait inflencer certains détails de cette prestation.</li>
       <li>La prestation sera distribuée par l’Agence du revenu du Canada (ARC).</li>
       <li>Nous mettrons ces renseignements à jour lorsqu’ils seront connus.</li>
     </ul>
