--- a/views/benefits/cssg-fr.njk
+++ b/views/benefits/cssg-fr.njk
@@ -11,7 +11,7 @@
   <div class="pb-5 mt-6">
     <strong>Bon à savoir :</strong>
     <ul class='list-outside list-disc'>
-      <li>Le gouvernement doit apporter des modifications à certaines lois afin de rendre cette prestation possible. Cela prendra un peu de temps.</li>
+      <li>Le gouvernement doit apporter des modifications à certaines lois afin de rendre cette prestation possible. Cela prendra un peu de temps et pourrait inflencer certains détails de cette prestation.</li>
       <li>Nous mettrons ces renseignements à jour lorsqu’ils seront connus.</li>
     </ul>
 
