add blue bar to header, and contact info to footer

--- a/views/_includes/footer.njk
+++ b/views/_includes/footer.njk
@@ -3,10 +3,13 @@
         <div class="footer-links">
             <ul>
                 <li>
-                    <a href={{ __('footer.link1') }}>{{ __('footer.link1.desc') }}</a>
+                    <a href="{{ __('footer.contact') }}">{{ __('footer.contact.desc') }}</a>
                 </li>
                 <li>
-                    <a href={{ __('footer.link2') }}>{{ __('footer.link2.desc') }}</a>
+                    <a href={{ __('footer.privacy') }}>{{ __('footer.privacy.desc') }}</a>
+                </li>
+                <li>
+                    <a href={{ __('footer.terms') }}>{{ __('footer.terms.desc') }}</a>
                 </li>
             </ul>
         </div>
