--- a/views/base.njk
+++ b/views/base.njk
@@ -37,7 +37,7 @@
         </nav>
 
         <div class="outer-container">
-            <header>
+            <header class="border-b-3 border-blue-900 pb-5 mb-10">
                 {% include "_includes/phaseBanner.njk" %}
                 {% include "_includes/fip.njk" %}
             </header>
