add Date modified to bottom of page

--- a/views/_includes/footer.njk
+++ b/views/_includes/footer.njk
@@ -1,4 +1,4 @@
-<footer>
+<footer class="border-0 bg-gray-100">
     <div class="page--container">
         <div class="footer-links">
             <ul>
