--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -88,7 +88,7 @@ h6 {
 main {
   @extend %page-container;
   padding: 0 $space-md;
-  padding-bottom: calc(#{$height-footer} + #{$space-xxl});
+  padding-bottom: calc(#{$height-footer} + #{$space-lg});
 
   h1 {
     border-bottom: 1px solid $color-red;
