Add a simple routehelper to the error pages
Move the route helper from the cypress folder to the route.helpers.js
file
Add the routeHelper method to the error-link
Use currying to mimic the functionality of the existing routeHelper
which should make the error-link include work on other pages
Hide error messages if in production mode.

--- a/views/500.njk
+++ b/views/500.njk
@@ -8,7 +8,7 @@
         {% include '_includes/error-link.njk' %}
     </div>
 
-    {% if message %}
+    {% if message and NODE_ENV !== 'production' %}
         <pre class="error">{{ message }}</pre>
     {% endif %}
 
