move feedback-related js to app.js, and make it better

--- a/views/base.njk
+++ b/views/base.njk
@@ -72,6 +72,8 @@
                     <script type="text/javascript" src={{ asset(val) }}></script>
                 {%- endfor -%}
             {%- endif -%}
+
+            <script type="text/javascript" src={{ asset('/dist/js/app.js') }}></script>
         {%- endblock -%}
     </body>
 </html>
