--- a/views/_includes/feedback.njk
+++ b/views/_includes/feedback.njk
@@ -37,6 +37,12 @@
         </div>
       </fieldset>
 
+      <div class="mt-6">
+        <label for="feedback-details" class="font-semibold">Can you tell us more?</label>
+        <span id="feedback-details-hint">Do not include your personal or financial details.</span>
+        <textarea name="details" class="h-40" id="feedback-details" aria-describedby="feedback-details-hint"></textarea>
+      </div>
+
       <button class="mt-8 py-3 px-4 border shadow bg-blue-800 w-auto" type="submit">{{ __('feedback.submit') }}</button>
     </form>
 
