update date on ei exhausted option

--- a/routes/question-your-situation-no-income/question-your-situation-no-income.njk
+++ b/routes/question-your-situation-no-income/question-your-situation-no-income.njk
@@ -18,7 +18,7 @@
                 data.no_income,
                 __('form.your_situation.no_income'),
                 errors,
-                { required: true })
+                { required: true, safe: true })
             }}
             {{ formButtons() }}
         {% endcall %}
