use locale strings

--- a/views/_includes/feedback.njk
+++ b/views/_includes/feedback.njk
@@ -38,8 +38,8 @@
       </fieldset>
 
       <div class="mt-6">
-        <label for="feedback-details" class="font-semibold">Can you tell us more?</label>
-        <span id="feedback-details-hint">Do not include your personal or financial details.</span>
+        <label for="feedback-details" class="font-semibold">{{ __('feedback.tell_us_more') }}</label>
+        <span id="feedback-details-hint">{{ __('feedback.personal_warning') }}</span>
         <textarea name="details" class="h-40" id="feedback-details" aria-describedby="feedback-details-hint"></textarea>
       </div>
 
