--- a/views/_includes/adobe.njk
+++ b/views/_includes/adobe.njk
@@ -1,6 +1,6 @@
 <!-- Adobe Analytic tags -->
 <meta name="dcterms.title" content="{{ __('app.title') }}"/>
-<meta name="dcterms.language" content="{{ getLocale() }}"/>
+<meta name="dcterms.language" content="{{ 'eng' if getLocale() === 'en' else 'fra' }}"/>
 <meta name="dcterms.creator" content="CDS"/>
 <meta name="dcterms.accessRights" content="2"/>
 <meta name="dcterms.service" content="ESDC-EDSC_c19b-c19p"/>
