--- a/views/_includes/footer.njk
+++ b/views/_includes/footer.njk
@@ -1,4 +1,4 @@
-<footer class="border-0 bg-gray-100">
+<footer class="border-0 bg-gray-100 mt-8">
     <div class="page--container flex flex-row justify-between md:items-baseline pt-4 md:pt-10 pb-6 md:pb-10">
         <nav class="footer-links md:w-4/5">
             <ul class="p-0 text-base list-inside">
