--- a/assets/scss/components/_details.scss
+++ b/assets/scss/components/_details.scss
@@ -1,25 +1,18 @@
 details {
   margin-bottom: $space-lg;
-  list-style-type: none;
   font-size: 0.875em;
 
   summary {
     color: $color-blue-dark;
     cursor: pointer;
-    // the little arrow disappears in firefox unless this is set explicitly
-    display: list-item;
-
-    &:focus {
-      outline: 0 !important;
-
-      > span {
-        @include focus($outlineOffset: 2px);
-      }
-    }
 
     // the summary element doesn't appear to accept underlined text
     > span {
       text-decoration: underline;
+    }
+
+    &:focus {
+      @include focus();
     }
 
     & ~ * {
