--- a/views/_includes/feedback.njk
+++ b/views/_includes/feedback.njk
@@ -1,5 +1,5 @@
-<details class="w-full sm:w-2/3 lg:w-1/2">
-    <summary class="px-4 py-2 bg-gray-300 rounded inline-block">{{ __('feedback.button') }}</summary>
+<details class="w-full sm:w-1/2 md:w-3/5 lg:w-2/5">
+    <summary class="px-4 py-2 bg-gray-300 rounded text-center">{{ __('feedback.button') }}</summary>
     
     <form action="/{{ getLocale() }}/feedback" method="post" class="px-8 py-6 rounded border border-gray-300 bg-gray-200" id="feedback-form">
       <input type="hidden" name="_csrf" id="feedback-csrf" value="{{ csrfToken }}">
