--- a/views/benefits/cerb-fr.njk
+++ b/views/benefits/cerb-fr.njk
@@ -5,23 +5,12 @@
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("2000 $ aux 4 semaines") }}
-    {{ blueLI("Pendant 4 mois maximum") }}
+    {{ blueLI("500 $ par semaine") }}
+    {{ blueLI("Jusqu’à 16 semaines tant que vous répondez aux critères d’admissibilité") }}
     {{ blueLI("À recevoir au plus tard 10 jours après la demande") }}
   </ul>
 
   <div class="pb-5 mt-6">
-
-    <strong>Cette prestation peut vous aider si :</strong>
-    <ul class='list-outside list-disc'>
-      <li>vous avez été forcé de quitter votre emploi.</li>
-      <li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li>
-      <li>vous avez perdu du <a href="https://www.canada.ca/fr/services/prestations/ae/pcusc-application/questions.html#exigences-revenu" target="_blank">revenu</a> en raison de la COVID-19 :<ul>
-          <li>Votre revenu n’était pas plus de 1000 $ pendant au moins 14 jours consécutifs durant les 4 premières semaines de votre demande.</li>
-          <li>Vous anticipez ne recevoir pas plus de 1000 $ durant les prochaines périodes de 4 semaines.</li>
-        </ul>
-      </li>
-    </ul>
 
     <strong>Prochaines étapes :</strong>
     <ul class='list-outside list-disc'>
@@ -35,6 +24,6 @@
   {{ infoLink(
         "cerb",
         "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
-        "Vérifier votre admissibilité à la PCU"
+        "Découvrez comment appliquer"
     )}}
 </div>
