--- a/views/_includes/languageLink.njk
+++ b/views/_includes/languageLink.njk
@@ -2,10 +2,10 @@
     <h2 class="sr-only">{{ __("Language Selection") }}</h2>
     <div class="language-link">
         {% if locale != 'fr' %}
-            <a href="{{route.path.fr}}" lang="fr">Français</a>
+            <a href="{{ getTranslatedRoute(route, 'fr') }}" lang="fr">Français</a>
         {% endif %}
         {% if locale != 'en' %}
-            <a href="{{route.path.en}}" lang="en">English</a>
+            <a href="{{ getTranslatedRoute(route, 'en') }}" lang="en">English</a>
         {% endif %}
     </div>
 {% endif %}
