fix inconsistencies across benefits cards

--- a/views/benefits/ccb_payment-en.njk
+++ b/views/benefits/ccb_payment-en.njk
@@ -13,7 +13,7 @@
 
     <strong>The benefit can help if you:</strong>
     <ul class='list-disc list-outside'>
-      <li>Care for a child under 18 years old</li>
+      <li>Care for a child under 18 years old.</li>
     </ul>
 
     <strong>Good to know:</strong>
