--- a/views/benefits/ei_workshare-en.njk
+++ b/views/benefits/ei_workshare-en.njk
@@ -13,13 +13,13 @@
 
     <strong>The benefit can help if:</strong>
     <ul class='list-disc list-outside'>
-      <li>Your hours have been reduced by 10 to 60% because of COVID-19</li>
+      <li>Your hours have been reduced by 10 to 60% because of COVID-19.</li>
     </ul>
 
     <strong>To do this:</strong>
     <ul class='list-disc list-outside'>
       <li>You would enter into an agreement with your employer and other coworkers who do the exact same work as you.</li>
-      <li> All employees who do the same work need to agree to share the work equally, and your employer has to agree as well. </li>
+      <li>All employees who do the same work need to agree to share the work equally, and your employer has to agree as well. </li>
     </ul>
 
   </div>
