--- a/views/benefits/gst_credit-fr.njk
+++ b/views/benefits/gst_credit-fr.njk
@@ -15,7 +15,7 @@
     <strong>Bon à savoir :</strong>
     <ul class='list-disc list-outside'>
       <li>Vous n’avez pas à faire la demande pour recevoir ce montant. À compter du 9 avril, il sera envoyé automatiquement si vous recevez déjà le crédit pour la TPS.</li>
-      <li>Vérifiez votre compte bancaire ou votre courrier pour voir si vous avez  recu le crédit pour la TPS</li>
+      <li>Vérifiez votre compte bancaire ou votre courrier pour voir si vous avez  recu le crédit pour la TPS.</li>
     </ul>
 
   </div>
