--- a/views/benefits/mortgage_deferral-en.njk
+++ b/views/benefits/mortgage_deferral-en.njk
@@ -12,9 +12,9 @@
 
     <strong>Good to know:</strong>
     <ul class='list-disc list-outside'>
-      <li>The bank will still charge interest</li>
+      <li>The bank will still charge interest.</li>
       <li> When you’re able to pay again, you’ll have to pay the interest that was collected during the deferral, as well as your regular payments.</li>
-      <li> You can also talk to your bank about special payment arrangements or re-amortizing your mortgage. </li>
+      <li> You can also talk to your bank about special payment arrangements or re-amortizing your mortgage.</li>
     </ul>
 
   </div>
