--- a/views/benefits/student_loan-en.njk
+++ b/views/benefits/student_loan-en.njk
@@ -15,7 +15,7 @@
     <ul class='list-disc list-outside'>
       <li>You don’t need to apply to pause your payments.</li>
       <li> Pre-authorized payments are stopped.</li>
-      <li> Log in to your <a href='https://www.csnpe-nslsc.canada.ca/en/home' target='_blank'>National Student Loans Service Centre</a> account to see how much you will save</li>
+      <li> Log in to your <a href='https://www.csnpe-nslsc.canada.ca/en/home' target='_blank'>National Student Loans Service Centre</a> account to see how much you will save.</li>
     </ul>
 
   </div>
