--- a/views/benefits/rent_help-fr.njk
+++ b/views/benefits/rent_help-fr.njk
@@ -8,7 +8,7 @@
 
     <ul class='list-disc list-outside'>
       <li>Les gouvernements provinciaux sont responsables de la réglementation des logements locatifs.</li>
-      <li> Dans la majorité des provinces et territoires, vous ne pouvez pas être expulsé pour ne pas avoir payé votre loyer</li>
+      <li> Dans la majorité des provinces et territoires, vous ne pouvez pas être expulsé pour ne pas avoir payé votre loyer.</li>
     </ul>
 
   </div>
